// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetFileInspector prepare currentSource test component snapshot else test show image file 1`] = `
<article
  className="inspector-component"
>
  <article
    className="inspector-component"
  >
    <div
      className=""
    >
      <h1>
        Image
      </h1>
      <hr />
      <span
        className=""
      >
        name:
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="1"
      />
    </div>
  </article>
</article>
`;

exports[`AssetFileInspector prepare currentSource test component snapshot else test show json file 1`] = `
<article
  className="inspector-component"
>
  <article
    className="inspector-component"
  >
    <div>
      <h1>
        Json
      </h1>
      <hr />
      <span
        className=""
      >
        name:
      </span>
      <input
        className="input-component float-input"
        onBlur={[Function]}
        onChange={[Function]}
        type="text"
        value="2"
      />
      <p>
        2.json
      </p>
    </div>
  </article>
</article>
`;

exports[`AssetFileInspector prepare currentSource test component snapshot if hasn't currentAssetFileNode, show nothing 1`] = `
<article
  className="inspector-component"
/>
`;

exports[`AssetFileInspector prepare currentSource test component snapshot if hasn't currentFile, show nothing 1`] = `
<article
  className="inspector-component"
/>
`;

exports[`AssetFileInspector prepare currentSource test rename file deal with specific case key in '', trigger onBlur, the input value should be primitive name 1`] = `
<article
  className="inspector-component"
>
  <div
    className=""
  >
    <h1>
      Image
    </h1>
    <hr />
    <span
      className=""
    >
      name:
    </span>
    <input
      className="input-component float-input"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value="1"
    />
  </div>
</article>
`;

exports[`AssetFileInspector prepare currentSource test rename file test not rename 1`] = `
<article
  className="asset-content"
>
  <article
    className="file-item "
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="1.jpg"
    />
    <span
      className="item-text"
    >
      1.jpg
    </span>
  </article>
  <article
    className="file-item item-active"
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="./public/img/12.jpg"
    />
    <span
      className="item-text"
    >
      2.json
    </span>
  </article>
</article>
`;

exports[`AssetFileInspector prepare currentSource test rename file test rename to specific name 1`] = `
<article
  className="asset-content"
>
  <article
    className="file-item item-active"
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="1.jpg"
    />
    <span
      className="item-text"
    >
      arvin.jpg
    </span>
  </article>
  <article
    className="file-item "
    onClick={[Function]}
  >
    <img
      onDragStart={[Function]}
      src="./public/img/12.jpg"
    />
    <span
      className="item-text"
    >
      2.json
    </span>
  </article>
</article>
`;
